# benchmark-helix-vs-gemini

./: .gitignore  README.md  flake.nix  helix.toml  pyproject.toml
benchmark_helix_vs_gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.toml
data/: queries.json
data/chunks/: dataset.jsonl
data/raw/: Concepts _ Kubernetes.txt
helix/: queries.hx  schema.hx
results/: gemini_results.csv  helix_results.csv
scripts/: plot_results.py  prepare_dataset.py  run_benchmarks.py  utils.py
