[project]
name = "benchmark-helix-vs-gemini"
version = "0.1.0"
description = "Reproducible benchmark harness comparing Helix-DB and Gemini File Search."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Benchmark Maintainer" }
]
dependencies = [
  "httpx>=0.27.0",
  "google-genai>=0.3.0",
  "google-api-core>=2.19.0",
  "google-ai-generativelanguage>=0.6.6", 
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []
